fix .box css height value that was affecting overflow on mobile screen on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,6 @@ body {
 }
 
 .box {
-    height: 400p x;
     width: auto;
     margin: 10px;
     overflow: none;
